# zjuCV-homework

./: .gitignore
hw1/: CMakeLists.txt  hw1  main.cpp
hw2/: CMakeLists.txt  hw2  main.cpp
hw3/: CMakeLists.txt  hw3  main.cpp
hw3/mytest/: CMakeLists.txt  main.cpp  mytest
hw3/mytrain/: CMakeLists.txt  main.cpp  mytrain
hw4/exampleCode/part1/: CMakeLists.txt  example_18-01_from_disk
hw4/exampleCode/part2/: CMakeLists.txt  example_19-01
hw4/mainCode/: CMakeLists.txt  intrinsics.xml  main  main.cpp
testOpenCV/: CMakeLists.txt  main.cpp  testOpenCV
